# DevGarden

./: .env.example  .gitignore  CLAUDE.md  blog-post-devgarden-setup.md  blog-post-devlog-setup.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6b7a33f4dce6_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/ai/: base.py  claude_provider.py  factory.py  google_provider.py  openai_provider.py  private_provider.py
backend/app/ai/prompts/: document_to_blog.py  git_to_blog.py  portfolio_to_blog.py
backend/app/api/: deps.py
backend/app/api/v1/: ai_generation.py  auth.py  portfolio.py  posts.py  settings.py  upload.py
backend/app/models/: __init__.py  ai_config.py  portfolio.py  post.py  user.py
backend/app/parsers/: base.py  docx_parser.py  pdf_parser.py  pptx_parser.py
backend/app/schemas/: ai.py  portfolio.py  post.py  user.py
backend/app/services/: auth_service.py  blog_generation_service.py  encryption_service.py  git_service.py  portfolio_service.py  post_service.py  storage_service.py
backend/app/worker/: celery_app.py  tasks.py
frontend/: package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/blog/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/generate/: page.tsx
frontend/src/app/portfolio/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/stores/: authStore.ts
frontend/src/styles/: globals.css
nginx/: nginx.conf
(+12 files in other folders)
