[project]
name = "devgarden-backend"
version = "0.1.0"
description = "DevGarden - Technical Developer Blog Platform Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "minio>=7.2.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "sse-starlette>=2.0.0",
    # Document parsing
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    # AI providers
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "google-genai>=1.0.0",
    # Git analysis
    "gitpython>=3.1.0",
    # Auth
    "google-auth>=2.35.0",
    # Encryption
    "cryptography>=43.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
